--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,17 +59,16 @@ exclude = [
     "tests/", "tests/*",
     ]
 
-# [tool.pytest.ini_options]
-# testpaths = ["tests"]
-# DJANGO_SETTINGS_MODULE = "mysite.settings"
-# log_cli = 1
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+DJANGO_SETTINGS_MODULE = "settings"
+log_cli = 1
+pythonpath = ["./tests"]
 
-# [tool.pylint.main]
-# load-plugins = [
-#     "pylint_django",
-#     "pylint_pytest"
-# ]
-# django-settings-module = "mysite.settings"
+[tool.pylint.main]
+load-plugins = [
+    "pylint_pytest"
+]
 
 [tool.pylint.messages_control]
 disable = [
