Fixed wrong CI trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
       branches:
           - master
       paths:
-        - "ocr_translate_hugging_face/**"
+        - "ocr_translate_google/**"
         - "pyproject.toml"
         - ".github/workflows/ci.yml"
         - ".pre-commit-config.yaml"
