--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
           - master
       paths:
         - "ocr_translate_google/**"
+        - "tests/**"
         - "pyproject.toml"
         - ".github/workflows/ci.yml"
         - ".pre-commit-config.yaml"
