--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ license = { file = "LICENSE.txt" }
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Natural Language :: English",
     "Topic :: Text Processing :: Linguistic",
 ]
